chat design enhancements

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,10 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #075e54;
-$secondary: #26a69a;
+$primary: #2C062A;
+$secondary: #d74452;
 $accent: #9c27b0;
-
+$yellow:#FE9D00;
 $dark: #1d1d1d;
 $white: #ffffff;
 $positive: #21ba45;
